k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yacht-application-server
  name: yacht-application-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yacht-application-server
  template:
    metadata:
      labels:
        app: yacht-application-server
    spec:
      serviceAccountName: yacht-application-server
      containers:
      - image: scr.app.sthings.tiab.ssc.sva.de/yacht-application-server/yacht-application-server:23.0306.1235
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        name: yacht-application-server
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: yacht-application-server
  name: yacht-application-server
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 50051
  selector:
    app: yacht-application-server
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: yacht-application-server-ingress
  namespace: yacht
spec:
  ingressClassName: nginx
  rules:
  - host: yas.dev.sthings.tiab.ssc.sva.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yacht-application-server
            port:
              number: 80
  tls:
  - secretName: yacht-application-server-ingress-tls
    hosts:
      - yas.dev.sthings.tiab.ssc.sva.de
